# BetterProjectors

./: CMakeLists.txt  README.md
src/: better-projectors.cpp  better-projectors.hpp  platform-windows.cpp  platform.hpp  plugin-main.cpp  projector-dock.cpp  projector-dock.hpp  projector-widget.cpp  projector-widget.hpp
src/ui/: window-add-projector.cpp  window-add-projector.hpp  window-add-projector.ui  window-add-projector.ui.autosave
